deal with special characters

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ lib/src/trait.dart.old
 Grimoire Hagall.docx
 Grimoire Yr.docx
 Grimoire Tyr.docx
+Grimoire-Yr.docx
+Grimoire-Sol.docx
+Grimoire-Tyr.docx
+Grimoire-Hagall.docx
