updated name of projects

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sorcery_parser
+name: gurps_traits
 description: A sample command-line application.
 # version: 1.0.0
 # homepage: https://www.example.com
