--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,8 @@ description: A sample command-line application.
 environment:
   sdk: '>=2.4.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.4.1
+dependencies:
+  test: ^1.6.5
 
 dev_dependencies:
   pedantic: ^1.0.0
-  test: ^1.0.0
