--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,20 @@ name: gurps_traits
 description: A sample command-line application.
 # version: 1.0.0
 # homepage: https://www.example.com
-# author: Wilson, Marvin (jw9615) <jw9615@att.com>
+author: Wilson, Marvin (jw9615) <jw9615@att.com>
 
 environment:
   sdk: '>=2.4.0 <3.0.0'
 
 dependencies:
-  test: ^1.6.5
+  dart_utils: 
+    git: 
+      url: https://github.com/mjeffw/dart_utils
+  gurps_dice:
+    git:
+      url: https://github.com/mjeffw/gurps_dice
 
 dev_dependencies:
   pedantic: ^1.0.0
+  test: ^1.6.5
+  test_coverage: ^0.3.0
